resonance_cxx_check4.txt
warning: virtual workspace defaulting to `resolver = "1"` despite one or more workspace members being on edition 2024 which implies `resolver = "3"`
note: to keep the current resolver, specify `workspace.resolver = "1"` in the workspace root's manifest
note: to use the edition 2024 resolver, specify `workspace.resolver = "3"` in the workspace root's manifest
note: for more details see https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
warning: resonance-cxx@0.1.0: --- Starting Native C++ Build Process ---
warning: resonance-cxx@0.1.0: 1. Verifying project structure and required files...
warning: resonance-cxx@0.1.0: Γ£à All required files and directories found.
warning: resonance-cxx@0.1.0: 2. Attempting to run CMake to configure C++ build in directory: C:\Users\adilh\repos\AudioVerseEngine\resonance-cxx\..\resonance-audio
warning: resonance-cxx@0.1.0: 2a. CMake not found on PATH ΓÇö skipping CMake configure/build.
warning: resonance-cxx@0.1.0: If you don't have prebuilt ResonanceAudio artifacts, please install CMake or set VRAUDIO_LIB_DIR to point to a built library.
warning: resonance-cxx@0.1.0: 4. Setting up linker and include paths for Rust build...
warning: resonance-cxx@0.1.0:    Found C++ library at: C:\Users\adilh\repos\AudioVerseEngine\resonance-cxx\..\resonance-audio\build\resonance_audio\Release
warning: resonance-cxx@0.1.0: 5. Building Rust cxx bridge...
warning: resonance-cxx@0.1.0: Γ£à Rust cxx bridge build complete.
warning: resonance-cxx@0.1.0: --- Native C++ Build Process Finished ---
    Checking resonance-cxx v0.1.0 (C:\Users\adilh\repos\AudioVerseEngine\resonance-cxx)
error[E0271]: type mismatch resolving `<i32 as ExternType>::Id == (r, a, (), S, o, u, r, c, e, I, d)`
   --> resonance-cxx\src\bridge.rs:38:14
    |
38  |     pub type SourceId = i32;
    |              ^^^^^^^^ expected `(r, a, (), S, o, u, r, c, e, I, d)`, found `(s, t, d, (), i, n, t, _3, _2, __, t)`
    |
    = note: expected tuple `(r, a, (), S, o, u, r, c, e, I, d)`
               found tuple `(s, t, d, (), i, n, t, _3, _2, __, t)`
note: required by a bound in `verify_extern_type`
   --> C:\Users\adilh\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\cxx-1.0.168\src\extern_type.rs:184:41
    |
184 | pub fn verify_extern_type<T: ExternType<Id = Id>, Id>() {}
    |                                         ^^^^^^^ required by this bound in `verify_extern_type`

For more information about this error, try `rustc --explain E0271`.
warning: resonance-cxx@0.1.0: --- Starting Native C++ Build Process ---
warning: resonance-cxx@0.1.0: 1. Verifying project structure and required files...
warning: resonance-cxx@0.1.0: Γ£à All required files and directories found.
warning: resonance-cxx@0.1.0: 2. Attempting to run CMake to configure C++ build in directory: C:\Users\adilh\repos\AudioVerseEngine\resonance-cxx\..\resonance-audio
warning: resonance-cxx@0.1.0: 2a. CMake not found on PATH ΓÇö skipping CMake configure/build.
warning: resonance-cxx@0.1.0: If you don't have prebuilt ResonanceAudio artifacts, please install CMake or set VRAUDIO_LIB_DIR to point to a built library.
warning: resonance-cxx@0.1.0: 4. Setting up linker and include paths for Rust build...
warning: resonance-cxx@0.1.0:    Found C++ library at: C:\Users\adilh\repos\AudioVerseEngine\resonance-cxx\..\resonance-audio\build\resonance_audio\Release
warning: resonance-cxx@0.1.0: 5. Building Rust cxx bridge...
warning: resonance-cxx@0.1.0: Γ£à Rust cxx bridge build complete.
warning: resonance-cxx@0.1.0: --- Native C++ Build Process Finished ---
error: could not compile `resonance-cxx` (lib) due to 1 previous error
